[package]
name = "gyazo-api"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gyazo API client"
repository = "https://github.com/mrsekut/gyazo-rs"
readme = "README.md"
keywords = ["gyazo", "api", "client"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

